--- a/profiles/templates/profiles/modals/_limit_exceeded_modal.html
+++ b/profiles/templates/profiles/modals/_limit_exceeded_modal.html
@@ -19,7 +19,7 @@
       <div class="modal-body">
         Wyczerpałeś darmową ilość zapytań które możesz zrealizować w sezonie.
          <br><br>
-        Jeśli jesteś zainteresowaniem rozszerzeniem pakietu {link tu}
+        Jeśli jesteś zainteresowaniem rozszerzeniem pakietu: <a href="/limits">zwiększ limity</a>
       </div>
       <div class="modal-footer">
         
