--- a/clubs/templates/clubs/teams/data.html
+++ b/clubs/templates/clubs/teams/data.html
@@ -4,7 +4,7 @@
 
     <div class="card m-2">
         <div class="card-body">
-            <h2 class="card-title">{% trans 'Drużyna' %}</h2>
+            <h2 class="card-title">{% trans 'Podstawowe informacje' %}</h2>
 
             <h6 class="card-subtitle mb-2 text-muted"></h6>
 
@@ -19,6 +19,17 @@
                 {% if object.fizo %} {% include template with key=_('Fizjoterapeuta') value=object.fizo     %} {% endif %}
                 {% if object.diet_suplements %} {% include template with key=_('Suplemnety / odżywki') value=object.diet_suplements      %} {% endif %}
             </div>
+
+
+            <h2 class="card-title">{% trans 'Osoby w klubie' %}</h2>
+
+            <h6 class="card-subtitle mb-2 text-muted"></h6>
+            {% with template='platform/tables/two_table.html'  object=object %}
+            <div class="card-text">    
+                {% include template with key=_('Trener')             value=object.display_coach|default:'brak przypisanej osoby'  link=object.manager.profile.get_permalink  %}
+                {% include 'clubs/_partials/editors.html' with template=template object=object %}
+            </div> 
+            {% endwith %}
         </div>
     </div>
 
