Fixes after Fri

--- a/clubs/templates/clubs/teams/data.html
+++ b/clubs/templates/clubs/teams/data.html
@@ -21,7 +21,7 @@
             </div>
 
 
-            <h2 class="card-title">{% trans 'Osoby w klubie' %}</h2>
+            <h2 class="card-title pt-3">{% trans 'Osoby w klubie' %}</h2>
 
             <h6 class="card-subtitle mb-2 text-muted"></h6>
             {% with template='platform/tables/two_table.html'  object=object %}
