--- a/marketplace/templates/marketplace/announcement.html
+++ b/marketplace/templates/marketplace/announcement.html
@@ -1,5 +1,6 @@
 {% load playmaker %}
 {% load thumbnail %}
+{% load i18n %}
 
 <div class="card announcement-card m-1 serv-section-2">
                 <div class="serv-section-2-icon"> <img class="avatar rounded img-responsive"  src="{% thumbnail object.club.picture|default:'default_club.png' 'club_small' %}">
@@ -59,10 +60,10 @@
         </div>
 
         <div class="card-text text-center col-md-12">
-            {% if object.www  %}
-            <span class="card-text pull-left">
-                <small class="text-muted"><a href="{{ object.www }}">{{ object.www }}</a> </small>
-            </span>
+            {% if object.www %}
+            <div>
+                <small class="text-muted"><a href="{{ object.www }}">{% trans 'Link do ogłoszenia / strony www klubu' %}</a> </small>
+            </div>
             {% endif %}
 
             <span class="card-text">
