--- a/soccerbase/templates/soccerbase/table.html
+++ b/soccerbase/templates/soccerbase/table.html
@@ -100,10 +100,10 @@
     {% endif %}
     
     <script src="{% static 'assets/js/filters.js' %}"></script>
-
+    
 <script>
 
-
+{% if user.is_authenticated %}
 $(document).ready(function($){
   
 	$("filter-form").submit(function() {
@@ -125,6 +125,37 @@ $(document).ready(function($){
 	
 });
 
+
+
+
+  $("#filter-button").click(function(){
+      $("input").each(function(){
+          if($(this).val() == '') {
+              $(this).remove();
+          }
+      });
+      $("select").each(function(){
+          if($(this).val() == '') {
+              $(this).remove();
+          }
+      });
+      $("#filter-button").submit();
+  });
+
+$("#filter-button-mobile").click(function(){
+    $("input").each(function(){
+        if($(this).val() == '') {
+            $(this).remove();
+        }
+    });
+    $("select").each(function(){
+        if($(this).val() == '') {
+            $(this).remove();
+        }
+    });
+    $("#filter-button-mobile").submit();
+});
+{% endif %}
 
 function checkWindowSize() {  
 
