--- a/backend/templates/partials/footer.html
+++ b/backend/templates/partials/footer.html
@@ -33,7 +33,7 @@
             <li><i class="bx bx-chevron-right"></i> <a href="/transfer">Wsparcie transferowe</a></li>
             {% comment %} <li><i class="bx bx-chevron-right"></i> <a href="#">Cos interesujacego innegot</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="#">Moze jeszcze cos</a></li> {% endcomment %}
-            <li><i class="bx bx-chevron-right"></i> <a href="/limits">Zwiększ limity</a></li>
+            <li><i class="bx bx-chevron-right"></i> {% include 'partials/_link_limit.html' %}</li>
         </ul>
         </div>
 
