--- a/profiles/templates/profiles/modals/_add_announcement_modal.html
+++ b/profiles/templates/profiles/modals/_add_announcement_modal.html
@@ -2,10 +2,7 @@
 {% load playmaker %}
 
 
-
 {% with id="addAnnouncementModal" title='Dodaj nowe ogłoszenie' %}
-
-
   <div class="modal fade bd-example-modal-lg" id="{{ id }}" tabindex="-1" role="dialog" aria-labelledby="{{ id }}Label" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
@@ -16,17 +13,12 @@
           </button>
         </div>
         <div class="modal-body">
-
-
             {% if user.announcementuserquota.left <= 0 %}
-
                 Wykorzystałeś cały plan na dodawanie ogłoszeń w tej rundzie
                 <br><br>
                 Rozszerz pakiet klikając:<br>
-                <a class="btn-pm btn-sm" href="https://playmaker.pro/limit/">Zwiększ limit</a>
-         
+                <a class="btn-pm btn-sm" href="https://playmaker.pro/limit/">Zwiększ limit</a>   
             {% else %}
-
                 <small class="text-muted">
                   Możesz jeszcze dodać <strong class="btn-pm btn-pm-sm">{{user.announcementuserquota.left}}</strong> ogłoszeń.
                 <br><br>
@@ -35,24 +27,17 @@
          
                 </small>
 
-
+<input id="add-ann-number" name="add-ann-number" type="hidden" value>
               <form id="add-announcement-form" class="mt-3" enctype="multipart/form-data" action={% url 'marketplace:add_announcement' %} method="post">
                   {% csrf_token %}
                   <span id="add-announcement-form-body"> </span>
 
                   <div class="modal-footer">
-                    <button class="btn-pm" type="submit" name="update" value="Update" id="submit-id-update">{% trans 'Dodaj ogłoszenie o testach' %}</button>
+                    <button id="add-announcement-submit" class="btn-pm" type="submit" name="update" value="Update" id="submit-id-update">{% trans 'Dodaj ogłoszenie o testach' %}</button>
                   </div>
               </form>
             {% endif %}
-
-
-               
-
-
-
         </div>
-
       </div>
     </div>
   </div>
