--- a/app/templates/platform/buttons/action_script.html
+++ b/app/templates/platform/buttons/action_script.html
@@ -52,8 +52,8 @@
             {% if button_id %} id="{{ button_id }}" {% endif %}  
             class="{{ button_class }} {% if active_class %}{{ active_class }}{% endif %} " 
 
-            {% if button_action_onlick.onclick %}
-                 onclick="{{ button_action_onlick.name }}(event, '{{ button_action_onlick.param }}' {% if button_action_onlick.param2 %}, '{{ button_action_onlick.param2 }}' {% endif %})"
+            {% if button_actions.onclick %}
+                 onclick="{{ button_actions.onclick.name }}(event, '{{ button_actions.onclick.param }}' {% if button_actions.onclick.param2 %}, '{{ button_actions.onclick.param2 }}' {% endif %})"
             {% endif %}
 
             {% if button_action.onclick %}
