--- a/app/templates/platform/navigation/_nav_coach.html
+++ b/app/templates/platform/navigation/_nav_coach.html
@@ -3,8 +3,8 @@
 {% load playmaker %}
 
 {% if user.is_authenticated %}
-    <li><a href="{% url 'marketplace:announcements'%}">{% trans 'Ogłoszenia' %}</a></li>
-    <li><a href="{% url 'profiles:my_requests'%}">{% trans 'Zapytania' %}</a></li>
+    <li class="nav-item"><a class="nav-link" href="{% url 'marketplace:announcements'%}">{% trans 'Ogłoszenia' %}</a></li>
+    <li class="nav-item"><a class="nav-link" href="{% url 'profiles:my_requests'%}">{% trans 'Zapytania' %}</a></li>
     {% include 'platform/navigation/_nav.html'%}
-    <li>{% get_my_team_link %}</li>
+    <li class="nav-item">{% get_my_team_link css_class='nav-link' %}</li>
 {% endif %}
