--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -97,7 +97,7 @@ onReady(function() {
   {% include 'partials/action_messages.html' %}
 
   {% block header %}
-      {% include 'partials/navigation.html' %}
+      {% include 'partials/navbar.html' %}
   {% endblock header %}
 
 
