--- a/app/templates/platform/navigation/_nav_player.html
+++ b/app/templates/platform/navigation/_nav_player.html
@@ -2,11 +2,11 @@
 {% load static %}
 
 {% if user.is_authenticated %}
-    <li><a href="/transfer/">Transfer</a></li>
-    <li><a href="{% url 'marketplace:announcements'%}">{% trans 'Ogłoszenia' %}</a></li>
-    <li><a href="{% url 'profiles:my_requests'%}">{% trans 'Zapytania' %}</a></li>
+    <li class="nav-item"><a class="nav-link" href="/transfer/">Transfer</a></li>
+    <li class="nav-item"><a class="nav-link" href="{% url 'marketplace:announcements'%}">{% trans 'Ogłoszenia' %}</a></li>
+    <li class="nav-item"><a class="nav-link" href="{% url 'profiles:my_requests'%}">{% trans 'Zapytania' %}</a></li>
     {% include 'platform/navigation/_nav.html'%}
-    <li><a href="{% url 'profiles:my_carrier'%}">{% trans 'Kariera' %}</a></li>
-    <li><a href="{% url 'profiles:my_fantasy'%}">{% trans 'Fantasy' %}</a></li>
-    <li><a href="{% url 'profiles:my_games'%}">{% trans 'Mecze' %}</a></li>
+    <li class="nav-item"><a class="nav-link" href="{% url 'profiles:my_carrier'%}">{% trans 'Kariera' %}</a></li>
+    <li class="nav-item"><a class="nav-link" href="{% url 'profiles:my_fantasy'%}">{% trans 'Fantasy' %}</a></li>
+    <li class="nav-item"><a class="nav-link" href="{% url 'profiles:my_games'%}">{% trans 'Mecze' %}</a></li>
 {% endif %}
