--- a/backend/templates/partials/_menuitems.html
+++ b/backend/templates/partials/_menuitems.html
@@ -1,15 +1,15 @@
- <li><a href="/about-project/">O projekcie</a></li>
+ <li class="nav-item" ><a class="nav-link" href="/about-project/">O projekcie</a></li>
 {% comment %} <li><a href="#services">Fantasy</a></li>
 <li><a href="#portfolio">Rozgrywki</a></li> {% endcomment %}
-<li class="drop-down"><a href="">Bazy</a>
-<ul>
-    <li><a href="{% url 'soccerbase:players' %}">Piłkarzy</a></li>
-    <li><a href="{% url 'soccerbase:coaches' %}">Trenerów</a></li>
-    <li><a href="{% url 'soccerbase:teams' %}">Klubów</a></li>
-</ul>
+<li class="drop-down"><a class="nav-link dropdown-toggle" data-toggle="dropdown" href="">Bazy</a>
+    <div class="dropdown-menu">
+        <a class="dropdown-item" href="{% url 'soccerbase:players' %}">Piłkarzy</a>
+        <a class="dropdown-item" href="{% url 'soccerbase:coaches' %}">Trenerów</a>
+        <a class="dropdown-item" href="{% url 'soccerbase:teams' %}">Klubów</a>
+    </div>
 </li>
 {% comment %} <li><a href="/products/">Produkty</a></li> {% endcomment %}
-<li><a href="/transfer/">Transfer</a></li>
-<li><a href="/scouting/">Skauting</a></li>
+<li class="nav-item"><a class="nav-link" href="/transfer/">Transfer</a></li>
+<li class="nav-item"><a class="nav-link" href="/scouting/">Skauting</a></li>
 {% comment %} <li><a href="/blog">Blog</a></li> {% endcomment %}
 {% comment %} <li><a href="#contact">Kontakt</a></li> {% endcomment %}
