--- a/profiles/templates/profiles/modals/_add_announcement_modal.html
+++ b/profiles/templates/profiles/modals/_add_announcement_modal.html
@@ -13,12 +13,16 @@
           </button>
         </div>
         <div class="modal-body">
-            {% if user.announcementuserquota.left <= 0 %}
+          <div id="add-ann-out">
+            
                 Wykorzystałeś cały plan na dodawanie ogłoszeń w tej rundzie
                 <br><br>
                 Rozszerz pakiet klikając:<br>
-                <a class="btn-pm btn-sm" href="https://playmaker.pro/limit/">Zwiększ limit</a>   
-            {% else %}
+                <a class="btn-pm btn-sm" href="https://playmaker.pro/limit/">Zwiększ limit</a>
+          </div>
+
+          <div id="add-ann-left">
+            
                 <small class="text-muted">
                   Możesz jeszcze dodać <strong class="btn-pm btn-pm-sm">{{user.announcementuserquota.left}}</strong> ogłoszeń.
                 <br><br>
@@ -27,7 +31,8 @@
          
                 </small>
 
-<input id="add-ann-number" name="add-ann-number" type="hidden" value>
+          
+              <input id="add-ann-number" name="add-ann-number" type="hidden" value>
               <form id="add-announcement-form" class="mt-3" enctype="multipart/form-data" action={% url 'marketplace:add_announcement' %} method="post">
                   {% csrf_token %}
                   <span id="add-announcement-form-body"> </span>
@@ -36,7 +41,7 @@
                     <button id="add-announcement-submit" class="btn-pm" type="submit" name="update" value="Update" id="submit-id-update">{% trans 'Dodaj ogłoszenie o testach' %}</button>
                   </div>
               </form>
-            {% endif %}
+          </div>
         </div>
       </div>
     </div>
