--- a/profiles/templates/profiles/carrier.html
+++ b/profiles/templates/profiles/carrier.html
@@ -21,6 +21,8 @@
 {% block content %}
 <section id="profile-carrier" class="profile">
 
+{% include 'profiles/player_subpage_header.html' %}
+
 <div class="d-flex flex-column justify-content-center text-center" data-aos="fade-up"> 
 
         {% if carrier is None %}
